kubernetes/main/apps/dev/testing/future/delugevpn.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delugevpn
  namespace: default
  labels:
    app: delugevpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delugevpn
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: delugevpn
    spec:
      containers:
        - name: deluge
          image: binhex/arch-delugevpn
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8112
            - containerPort: 8118
            - containerPort: 58846
            - containerPort: 58946
          volumeMounts:
            - mountPath: /seeding
              name: artemisfs
              subPath: seeding
            - mountPath: /downloads
              name: artemisfs
              subPath: downloads
            - mountPath: /movies
              name: artemisfs
              subPath: media/movies
            - mountPath: /tv
              name: artemisfs
              subPath: media/tv
            - mountPath: /anime
              name: artemisfs
              subPath: media/anime
            - mountPath: /config
              name: config
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: artemisfs
          persistentVolumeClaim:
            claimName: afs-pvc
        - name: config
          persistentVolumeClaim:
            claimName: delugevpn-config
        - name: localtime
          hostPath:
            path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: delugevpn-svc
  labels:
    app: delugevpn-svc
spec:
  type: LoadBalancer
  ports:
    - port: 7878
      protocol: TCP
  selector:
    app: deluge

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-prod
  name: delugevpn-ing
spec:
  rules:
    - host: deluge.dcunhalab.com
      http:
        paths:
          - backend:
              serviceName: delugevpn-svc
              servicePort: 8112
